# foomuuri

./: .gitignore  .ruff.toml  CHANGELOG.md  Makefile  README.md  foomuuri.spec  pyproject.toml
.github/workflows/: pylint.yml  run_tests.yml
debian/: control  firewalld.control  postinst  postrm
doc/: Makefile  foomuuri-bash-completion  foomuuri.1  foomuuri.8  foomuuri.md  prometheus-foomuuri-exporter.md
docs/: Advanced-Filtering.md  Best-Practices.md  Configuration.md  Getting-Started.md  Host-Firewall.md  Monitor.md  Multiple-ISP.md  Router-Firewall.md  Rule.md  faq.md  index.md  install.md  nav.toml  zensical.toml
docs/config/: basic.md
docs/example/: advanced.md  host-firewall.md  multiple-isp.md  router-firewall.md
docs/tool/: monitor.md
etc/: 50-foomuuri.conf  block.fw  default.services.conf  drop.fw  static.nft
firewalld/: dbus-firewalld.conf  fi.foobar.Foomuuri-FirewallD.conf
man/: foomuuri.8  foomuuri.md  prometheus-foomuuri-exporter.1  prometheus-foomuuri-exporter.md
misc/: foomuuri-bash-completion  monitor-example-command.sh  monitor.event
misc/webdoc/: Makefile  common.toml  robots.txt  versions.json
prometheus/: Makefile  foomuuri_exporter  foomuuri_exporter.service  prometheus-foomuuri-exporter  prometheus-foomuuri-exporter.service
src/: foomuuri
systemd/: fi.foobar.Foomuuri1.conf  fi.foobar.Foomuuri1.policy  foomuuri-boot.service  foomuuri-dbus.service  foomuuri-iplist.service  foomuuri-iplist.timer  foomuuri-monitor.service  foomuuri-resolve.service  foomuuri-resolve.timer  foomuuri.service  foomuuri.tmpfilesd
test/: Makefile
(+133 files in other folders)
